# radr-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: actions.rs  config.rs  domain.rs  lib.rs  main.rs  usecase.rs  yaml_util.rs
src/repository/: fs.rs  mod.rs
tests/: cli.rs
