[package]
name = "radr-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI to manage Architecture Decision Records (ADRs)"
license-file = "LICENSE"
repository = "https://github.com/aacevedot/radr"
readme = "README.md"
keywords = ["adr", "architecture", "docs"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

[lib]
name = "radr"

[[bin]]
name = "radr"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
